<resources>
    <string name="app_name">Movie Collection</string>
    <string name="movie_title">Название фильма</string>
    <string name="date_of_release">Дата выхода в прокат</string>
    <string name="popularity">Рейтинг</string>
    <string name="genre">Жанр</string>
    <string name="overview">Описание</string>
    <string name="runtime">Время</string>
    <string name="swith_to_country">Swith to Country</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="budget">Бюджет</string>
    <string name="connection_changet">Подключение изменилось</string>
    <string name="adult_content">Показывать взрослый контент</string>
    <string name="settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="history_title">История</string>
    <string name="hint_note_text">Ваши заметки</string>
    <string name="contacts_title">Контакты</string>
    <string name="map_title">Карта</string>
    <string name="access_to_contacts">Доступ к контактам</string>
    <string name="explain">Объяснение</string>
    <string name="close">Закрыть</string>
    <string name="enter_query">Введите запрос</string>
    <string name="search">Поиск</string>
    <string name="marker_start">Стартовая точка</string>
</resources>